@@ -41,6 +41,14 @@ sub import {
     $report_warnings = exists $names{':report_warnings'};
 
     delete @names{qw(:no_end_test :fail_on_warning :report_warnings)};
+
+    {
+        my $callpkg = caller(1);
+        no strict 'refs';
+        no warnings 'once';
+        undef *{$callpkg.'::done_testing'} if *{$callpkg.'::done_testing'}{CODE};
+    }
+
     __PACKAGE__->export_to_level(1, $class, keys %names);
 }
 
